; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_io_file.c_fileSeek.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_io_file.c_fileSeek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdIOCtx = type { i32 }
%struct.TYPE_2__ = type { i32 }

@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gdIOCtx*, i32)* @fileSeek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fileSeek(%struct.gdIOCtx* %0, i32 %1) #0 {
  %3 = alloca %struct.gdIOCtx*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__*, align 8
  store %struct.gdIOCtx* %0, %struct.gdIOCtx** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.gdIOCtx*, %struct.gdIOCtx** %3, align 8
  %7 = bitcast %struct.gdIOCtx* %6 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %7, %struct.TYPE_2__** %5, align 8
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @SEEK_SET, align 4
  %13 = call i64 @fseek(i32 %10, i32 %11, i32 %12)
  %14 = icmp eq i64 %13, 0
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i64 @fseek(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
